# INF-4301A

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.txt  rust_installer.sh
adder/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzzer_script_1.rs
src/: .gitignore  ast.rs  builtins.rs  calculator.lalrpop  common.rs  env.rs  error.rs  lib.rs  main.rs  parser.lalrpop  processing.rs  repl.rs  type_sys.rs
src/parser/: mod.rs  parser.lalrpop  tests.rs
src/processing/: evaluate.rs  mod.rs  pattern_match.rs  pattern_match_check.rs  print.rs  type_annotate.rs  type_check.rs
tests/: test_file.tig
