[package]
name = "inf_4301a"
version = "0.1.0"
authors = ["Minijackson <minijackson@riseup.net>"]
build = "build.rs"

[build-dependencies]
#lalrpop = "0.13.0"
lalrpop = { git = "https://github.com/minijackson/lalrpop", branch = "user_uses_intern_token" }

[dependencies]
lalrpop-util = "0.12.5"
regex = "0.2"
rustyline = "1.0.0"
itertools = "0.5.9"
term = "0.4.5"
